Added current static site.

--- a/markup/index.html
+++ b/markup/index.html
@@ -39,9 +39,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#projects">Technology & Projects</a></li>
-            <li><a href="#programs">Programs</a></li>
             <li><a href="#members">Members</a></li>
-            <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact Us</a></li>
           </ul>
         </div>
@@ -62,7 +60,9 @@
 
             <div class="col-sm-8">
               <h1>New Explorations in Information Science</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius iaculis mauris, sed rutrum arcu scelerisque nec. Nulla facilisi. Nullam vulputate, velit sed bibendum accumsan, erat nisl ornare enim, ac sollicitudin ex nibh in dolor. Nulla lobortis blandit nulla et dignissim. Curabitur a ex tempor, feugiat leo mattis, ultricies eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vulputate dui tortor, sit amet malesuada arcu aliquam nec. Vivamus consectetur convallis libero, ac feugiat odio imperdiet volutpat.</p>
+              <p>NEXIS is a student based, membership driven research center based in the <a target="_blank" href="http://ischool.syr.edu/">Syracuse University iSchool</a>. We are innovators supporting innovators, students supporting students, together building upon today's emerging technologies. NEXIS members freely work on independent projects to create novel innovations which advance the fields of information science, engineering, technology.</p>
+
+              <p>NEXIS is open to Syracuse University students from every discipline with the understanding that the best ideas are generated when people from diverse backgrounds and expertise work together. Interested in learning more? Check out our current happenings below, or <a href="mailto:pbcroy@syr.edu">reach out today</a>!</p>
             </div> <!-- /intro body -->
           </div> <!-- /.row -->
         </div> <!-- /row container -->
@@ -104,7 +104,7 @@
               <a href="#"><img src="static/img/ibeacon.png" alt="TEXT" /></a>
             </div>
             <div class="col-sm-2">
-              <a data-toggle="modal" data-target="#apply-modal" href="#"><span class="glyphicon glyphicon-plus"></span></a>
+              <a href="mailto:pbcroy@syr.edu"><span class="glyphicon glyphicon-plus"></span></a>
             </div>
           </div> <!-- /row two -->
         </div> <!-- /row container -->
@@ -114,48 +114,6 @@
         <hr />
       </div>
 
-      <section id="programs">
-        <h1>Programs</h1>
-
-        <!-- Carousel -->
-        <div id="carousel-programs" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-programs" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-programs" data-slide-to="1"></li>
-          </ol>
-
-          <!-- Slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <div class="carousel-overlay"></div>
-              <img src="static/img/drones.jpg" alt="Placeholder Image">
-              <div class="carousel-caption">
-                <h1><a href="#">Skyworks Project + SU Athletics</a></h1>
-                <p>The Skyworks Team -- spearheaded by Arland Whitfield and Natalie Wiesnet -- has teamed up with SU Athletics to film practice sessions throughout campus. Check out their footage online or read more here.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-overlay"></div>
-              <img src="static/img/drones.jpg" alt="Placeholder Image">
-              <div class="carousel-caption">
-                <h1><a href="#">Skyworks Project + SU Athletics</a></h1>
-                <p>The Skyworks Team -- spearheaded by Arland Whitfield and Natalie Wiesnet -- has teamed up with SU Athletics to film practice sessions throughout campus. Check out their footage online or read more here.</p>
-              </div>
-          </div>
-
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-programs" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-programs" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div> <!-- /.carousel-programs -->
-      </section> <!-- /programs -->
-
       <section class="dark" id="members">
         <h1>Members</h1>
 
@@ -164,38 +122,38 @@
           <div class="row">
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
+                <img src="static/img/braden.jpg" />
+                <div class="member-overlay">Braden Croy</div>
+              </a>
+            </div>
+            <div class="col-sm-2">
+              <a href="#">
+                <img src="static/img/billy.jpg" />
                 <div class="member-overlay">Billy Ceskavich</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/ross.jpg" />
+                <div class="member-overlay">Ross Lazer</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/jay.jpg" />
+                <div class="member-overlay">Jay Getman</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/arland.jpg" />
+                <div class="member-overlay">Arland Whitfield</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
-              </a>
-            </div>
-            <div class="col-sm-2">
-              <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/natalie.jpg" />
+                <div class="member-overlay">Natalie Wiesnet</div>
               </a>
             </div>
           </div>
@@ -204,38 +162,38 @@
           <div class="row">
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/aravind.jpg" />
+                <div class="member-overlay">Ararvind Gopalakrishnan</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/andy.jpg" />
+                <div class="member-overlay">Andy Pregler</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/sissy.jpg" />
+                <div class="member-overlay">Sissy Whitfield</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/max.jpg" />
+                <div class="member-overlay">Max Matthews</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/hailey.jpg" />
+                <div class="member-overlay">Hailey Temple</div>
               </a>
             </div>
             <div class="col-sm-2">
               <a href="#">
-                <img src="static/img/sample_headshot.jpg" />
-                <div class="member-overlay">Billy Ceskavich</div>
+                <img src="static/img/branden.jpg" />
+                <div class="member-overlay">Branden Birmingham</div>
               </a>
             </div>
           </div> <!-- /row two -->
@@ -246,48 +204,6 @@
         <hr />
       </div>
 
-      <section id="news">
-        <h1>News</h1>
-
-        <!-- Carousel -->
-        <div id="carousel-news" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-news" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-news" data-slide-to="1"></li>
-          </ol>
-
-          <!-- Slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <div class="carousel-overlay"></div>
-              <img src="static/img/drones.jpg" alt="Placeholder Image">
-              <div class="carousel-caption">
-                <h1><a href="#">Skyworks Project + SU Athletics</a></h1>
-                <p>The Skyworks Team -- spearheaded by Arland Whitfield and Natalie Wiesnet -- has teamed up with SU Athletics to film practice sessions throughout campus. Check out their footage online or read more here.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-overlay"></div>
-              <img src="static/img/drones.jpg" alt="Placeholder Image">
-              <div class="carousel-caption">
-                <h1><a href="#">Skyworks Project + SU Athletics</a></h1>
-                <p>The Skyworks Team -- spearheaded by Arland Whitfield and Natalie Wiesnet -- has teamed up with SU Athletics to film practice sessions throughout campus. Check out their footage online or read more here.</p>
-              </div>
-          </div>
-
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-news" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-news" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div> <!-- /.carousel-news -->
-      </section> <!-- /news -->
-
       <section class="dark" id="contact">
         <h1>Contact Us</h1>
 
@@ -296,39 +212,8 @@
             <!-- Apply Form -->
             <div class="col-sm-6">
               <p>Interested in getting involved with NEXIS? Want to work on your own independent projects?</p>
-              <button type="button" id="apply-button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#apply-modal">Apply Today</button>
+              <a id="apply-button" href="mailto:pbcroy@syr.edu">Apply Today</a>
             </div> <!-- /apply -->
-
-            <!-- Modal -->
-            <div class="modal fade" id="apply-modal" tabindex="-1" role="dialog" aria-labelledby="apply-modal-label" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="apply-modal-label">Email NEXIS</h4>
-                  </div>
-                  <div class="modal-body">
-                    <form role="form">
-                      <div class="form-group">
-                        <label for="input-email">Your Email</label>
-                        <input type="email" class="form-control" id="input-email" placeholder="netid@syr.edu">
-                      </div>
-                      <div class="form-group">
-                        <label for="input-subject">Subject</label>
-                        <input type="text" class="form-control" id="input-subject" placeholder="Interest in NEXIS">
-                      </div>
-                      <div class="form-group">
-                        <label for="input-content">Message Content</label>
-                        <textarea class="form-control" id="input-content" rows="3"></textarea>
-                      </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Send</button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- /modal -->
 
             <div class="col-sm-6">
               <div class="list-container">
@@ -347,6 +232,8 @@
 
       <footer>
         <img src="static/img/nexislogo_outline.png" alt="NEXIS Logo" />
+        <br />
+        <img src="static/img/ischool.jpg" alt="iSchool Logo" />
         <p>2014</p>
       </footer>
     </div> <!-- /main -->
