--- a/static/index.html
+++ b/static/index.html
@@ -362,12 +362,21 @@
     <script src="static/js/bootstrap.min.js"></script>
 
     <script>
-      $('body').scrollspy({ target: '.navbar' })
+      $('body').scrollspy({ target: '.navbar' });
+
+      var updatepics = function() {
+        var height = $('#members img').height();
+        $('.member-overlay').css({'width': height+'px'});
+      };
+
+      $(window).on('resize', updatepics);
 
       // Makes member avatar overlay squared
       $(document).ready(function(){
         var height = $('#members img').height();
         $('.member-overlay').css({'width': height+'px'});
+
+        updatepics();
       });
     </script>
   </body>
