--- a/static/index_template.html
+++ b/static/index_template.html
@@ -352,6 +352,8 @@
         </div> <!-- /row container -->
       </section> <!-- /contact -->
 
+      <!-- END INDEX PAGE CONTENT -->
+
       <footer>
         <img src="static/img/nexislogo_outline.png" alt="NEXIS Logo" />
         <p>2014</p>
