--- a/static/page.html
+++ b/static/page.html
@@ -55,13 +55,13 @@
         <div class="img-container">
           <div class="header-overlay"></div>
           <div class="container header-text">
-            <h1>Page Title</h1>
-            <h3>Description subtitle text.</h3>
+            <h1 class="header-title">Page Title</h1>
+            <h3 class="header-sub">Description subtitle text.</h3>
           </div>
         </div>
       </header>
 
-      <section class="container">
+      <section class="container page-container">
         <h2>Header Text</h2>
 
         <p>Some paragraph text <a href="#">with a link</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius iaculis mauris, sed rutrum arcu scelerisque nec. Nulla facilisi. Nullam vulputate, velit sed bibendum accumsan, erat nisl ornare enim, ac sollicitudin ex nibh in dolor. Nulla lobortis blandit nulla et dignissim. Curabitur a ex tempor, feugiat leo mattis, ultricies eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vulputate dui tortor, sit amet malesuada arcu aliquam nec. Vivamus consectetur convallis libero, ac feugiat odio imperdiet volutpat.</p>
